--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="board"><!-- Players --></div>
         <div id="cube_div">
             <b id="cube_title">הטילו את הקוביה</b><br />
-            <img id="cube" src="images/cube-6.png" alt="הקוביה" width="26%" ><br />
+            <img id="cube" src="cube-6.png" alt="הקוביה" width="26%" ><br />
             <button onclick="generateCube()">הטל קוביה</button>
         </div>
         <div id="status_bar">
