--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>סולמות ונחשים</title>
-    <link rel="icon" href="images/board.jpg" />
+    <link rel="icon" href="board.jpg" />
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -29,7 +29,7 @@
         <div id="board"><!-- Players --></div>
         <div id="cube_div">
             <b id="cube_title">הטילו את הקוביה</b><br />
-            <img id="cube" src="images/cube-6.png" alt="הקוביה" width="26%" ><br />
+            <img id="cube" src="cube-6.png" alt="הקוביה" width="26%" ><br />
             <button onclick="generateCube()">הטל קוביה</button>
         </div>
         <div id="status_bar">
