--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>סולמות ונחשים</title>
-    <link rel="icon" href="images/board.jpg" />
+    <link rel="icon" href="board.jpg" />
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
